--- a/src/HexcrawlStats/HexcrawlStats.fsproj
+++ b/src/HexcrawlStats/HexcrawlStats.fsproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FsRandom" Version="1.4.*" />
+    <PackageReference Include="Unclassified.NetRevisionTask" Version="0.3.*" PrivateAssets="all" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Include="Program.fs" />
   </ItemGroup>
 
