--- a/src/HexcrawlStats/HexcrawlStats.fsproj
+++ b/src/HexcrawlStats/HexcrawlStats.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharpx.Extras" Version="2.4.*" />
     <PackageReference Include="FsRandom" Version="1.4.*" />
     <PackageReference Include="Unclassified.NetRevisionTask" Version="0.3.*" PrivateAssets="all" />
   </ItemGroup>
