--- a/src/HexcrawlStats/HexcrawlStats.fsproj
+++ b/src/HexcrawlStats/HexcrawlStats.fsproj
@@ -1,19 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="FSharpx.Extras" Version="2.4.*" />
-    <PackageReference Include="FsRandom" Version="1.4.*" />
-    <PackageReference Include="Unclassified.NetRevisionTask" Version="0.3.*" PrivateAssets="all" />
-  </ItemGroup>
-
   <ItemGroup>
     <Compile Include="Hexcrawl.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Deedle" Version="2.1.*" />
+    <PackageReference Include="FsRandom" Version="1.4.*" />
+    <PackageReference Include="Unclassified.NetRevisionTask" Version="0.3.*" PrivateAssets="all" />
+  </ItemGroup>
 </Project>
